@@ -1,5 +1,5 @@
 FROM openjdk:11
 COPY hub-services-0.0.1-SNAPSHOT.jar /opt/
 EXPOSE 3013
-CMD ["/bin/bash", "-c", "java -XX:+PrintFlagsFinal $JAVA_OPTIONS -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -jar /opt/hub-services-0.0.1-SNAPSHOT.jar"]
+CMD ["/bin/bash", "-c", "java -XX:+PrintFlagsFinal $JAVA_OPTIONS -XX:+UnlockExperimentalVMOptions -jar /opt/hub-services-0.0.1-SNAPSHOT.jar"]
 
